Implement core data structures and infrastructure
Add DataStructure base interface with DSNode and DSEdge

Implement ArrayStructure, GraphStructure, ListStructure, TreeStructure

Add AlgorithmInfo class for algorithm metadata

Refactor DataModelManager to use new structure classes

Enhance Graph class with getAllNodeIds and getAllEdges methods

Update CMakeLists.txt with new source and header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,13 @@ set(SOURCES
     src/core/graph.cpp
     src/core/list_node.cpp
     src/core/tree_node.cpp
-    src/core/DataModelManager.cpp
+    src/core/data_model_manager.cpp
+    src/core/array_structure.cpp
+    src/core/graph_structure.cpp
+    src/core/list_structure.cpp
+    src/core/tree_structure.cpp
     
-  # Orchestration
+    # Orchestration
     src/orchestration/algorithm_manager.cpp
     
     # Algorithms
@@ -34,11 +38,11 @@ set(SOURCES
     src/algorithms/execution_state.cpp
     
     # Visualization
-    src/visualization/GraphvizLayoutEngine.cpp
     src/visualization/animation_frame.cpp
     src/visualization/visualization_renderer.cpp
     src/visualization/interaction_manager.cpp
-    
+    src/visualization/playback_controller.cpp
+
     # UI
     src/ui/main_window.cpp
     src/ui/visualization_pane.cpp
@@ -48,39 +52,26 @@ set(SOURCES
 
 # Header files
 set(HEADERS
-    # Include headers
-    include/core/DataStructure.h
-    include/core/AlgorithmInfo.h
-    include/core/AlgorithmFactory.h
-    include/core/AlgorithmManager.h
-    include/core/DataModelManager.h
-    include/execution/AlgorithmRunner.h
-    include/execution/ExecutionState.h
-    include/execution/FrameRecorder.h
-    include/execution/algorithms/BFSRunner.h
-    include/core/factories/BFSFactory.h
-    include/visualization/GraphvizLayoutEngine.h
-    include/visualization/VisualizationRenderer.h
-    include/visualization/PlaybackController.h
-    include/visualization/InteractionManager.h
-    include/visualization/AnimationFrame.h
-    include/ui/MainWindow.h
-    include/ui/VisualizationPane.h
-    include/ui/ControlPanel.h
-    include/ui/MetricsPanel.h
-    
     # Src headers
     src/core/graph.h
     src/core/list_node.h
     src/core/tree_node.h
+    src/core/data_model_manager.h
+    src/core/data_structure.h
+    src/core/algorithm_info.h
+    src/core/array_structure.h
+    src/core/graph_structure.h
+    src/core/list_structure.h
+    src/core/tree_structure.h
     src/orchestration/algorithm_factory.h
     src/orchestration/algorithm_manager.h
     src/algorithms/algorithm_runner.h
     src/algorithms/execution_state.h
     src/algorithms/frame_recorder.h
- src/visualization/animation_frame.h
+    src/visualization/animation_frame.h
     src/visualization/visualization_renderer.h
     src/visualization/interaction_manager.h
+    src/visualization/playback_controller.h
     src/ui/main_window.h
     src/ui/visualization_pane.h
     src/ui/control_panel.h
