Ajout AlgorithmFactory & AlgorithmManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,26 @@ set(CMAKE_AUTOUIC ON)
 # Find Qt6
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
+# === Graphviz Configuration (Windows) ===
+set(GRAPHVIZ_FOUND FALSE)
+if(WIN32)
+    set(GRAPHVIZ_ROOT "C:/Program Files/Graphviz")
+    if(EXISTS "${GRAPHVIZ_ROOT}/include/graphviz/gvc.h")
+        set(GRAPHVIZ_FOUND TRUE)
+        message(STATUS "Graphviz found at: ${GRAPHVIZ_ROOT}")
+        
+        # Include headers
+        include_directories("${GRAPHVIZ_ROOT}/include/graphviz")
+        
+        # Define DLL paths
+        set(GRAPHVIZ_GVC_DLL "${GRAPHVIZ_ROOT}/bin/gvc.dll")
+        set(GRAPHVIZ_CGRAPH_DLL "${GRAPHVIZ_ROOT}/bin/cgraph.dll")
+        set(GRAPHVIZ_CDT_DLL "${GRAPHVIZ_ROOT}/bin/cdt.dll")
+    else()
+        message(WARNING "Graphviz not found at ${GRAPHVIZ_ROOT}. Graphviz features will be disabled.")
+    endif()
+endif()
+
 # Include directories
 include_directories(
     ${CMAKE_SOURCE_DIR}/include
@@ -26,7 +46,7 @@ set(SOURCES
     src/core/tree_node.cpp
     src/core/DataModelManager.cpp
     
-  # Orchestration
+    # Orchestration
     src/orchestration/algorithm_manager.cpp
     
     # Algorithms
@@ -78,7 +98,7 @@ set(HEADERS
     src/algorithms/algorithm_runner.h
     src/algorithms/execution_state.h
     src/algorithms/frame_recorder.h
- src/visualization/animation_frame.h
+    src/visualization/animation_frame.h
     src/visualization/visualization_renderer.h
     src/visualization/interaction_manager.h
     src/ui/main_window.h
@@ -105,11 +125,23 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 # Platform-specific settings
 if(WIN32)
     set_target_properties(${PROJECT_NAME} PROPERTIES
-      WIN32_EXECUTABLE TRUE
+        WIN32_EXECUTABLE TRUE
     )
+    
+    # === Copy Graphviz DLLs to output directory (if found) ===
+    if(GRAPHVIZ_FOUND)
+        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                "${GRAPHVIZ_GVC_DLL}"
+                "${GRAPHVIZ_CGRAPH_DLL}"
+                "${GRAPHVIZ_CDT_DLL}"
+                $<TARGET_FILE_DIR:${PROJECT_NAME}>
+            COMMENT "Copying Graphviz DLLs to output directory"
+        )
+    endif()
 endif()
 
 # Install target
 install(TARGETS ${PROJECT_NAME}
-  RUNTIME DESTINATION bin
+    RUNTIME DESTINATION bin
 )
