--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 # Find Qt6
-#find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
 # === Graphviz Configuration (Windows) ===
 set(GRAPHVIZ_FOUND FALSE)
@@ -32,7 +32,6 @@ endif()
 
 # Include directories
 include_directories(
-    ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/src
 )
 
@@ -52,10 +51,12 @@ set(SOURCES
     
     # Orchestration
     src/orchestration/algorithm_manager.cpp
+    src/orchestration/sorting_algorithm_factory.cpp  # ? Ajouté
     
     # Algorithms
     src/algorithms/algorithm_runner.cpp
     src/algorithms/execution_state.cpp
+    src/algorithms/bubble_sort.cpp  # ? Ajouté
     
     # Visualization
     src/visualization/animation_frame.cpp
@@ -72,7 +73,7 @@ set(SOURCES
 
 # Header files
 set(HEADERS
-    # Src headers
+    # Core
     src/core/graph.h
     src/core/list_node.h
     src/core/tree_node.h
@@ -83,15 +84,26 @@ set(HEADERS
     src/core/graph_structure.h
     src/core/list_structure.h
     src/core/tree_structure.h
+    
+    # Orchestration
     src/orchestration/algorithm_factory.h
     src/orchestration/algorithm_manager.h
+    src/orchestration/sorting_algorithm_factory.h  # ? Ajouté
+    src/orchestration/algorithm.h  # ? Ajouté (essentiel)
+    
+    # Algorithms
     src/algorithms/algorithm_runner.h
     src/algorithms/execution_state.h
     src/algorithms/frame_recorder.h
+    src/algorithms/bubble_sort.h  # ? Ajouté
+    
+    # Visualization
     src/visualization/animation_frame.h
     src/visualization/visualization_renderer.h
     src/visualization/interaction_manager.h
     src/visualization/playback_controller.h
+    
+    # UI
     src/ui/main_window.h
     src/ui/visualization_pane.h
     src/ui/control_panel.h
