--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,169 +3,100 @@ project(dataviz-uit VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-# Find Qt6
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
-# === Graphviz Configuration (Windows) ===
-set(GRAPHVIZ_FOUND FALSE)
+set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+file(GLOB_RECURSE DATAVIZ_SOURCES CONFIGURE_DEPENDS ${SRC_DIR}/*.cpp)
+
+add_executable(${PROJECT_NAME} ${DATAVIZ_SOURCES})
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${SRC_DIR})
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets)
+
+set(GRAPHVIZ_FOUND OFF)
+set(GRAPHVIZ_ROOT_DIR "")
+set(GRAPHVIZ_DLLS)
+
 if(WIN32)
-    set(GRAPHVIZ_ROOT "C:/Program Files/Graphviz")
-    if(EXISTS "${GRAPHVIZ_ROOT}/include/graphviz/gvc.h")
-  set(GRAPHVIZ_FOUND TRUE)
-        message(STATUS "Graphviz found at: ${GRAPHVIZ_ROOT}")
-      
-   # Include headers
-include_directories("${GRAPHVIZ_ROOT}/include/graphviz")
-        
-   # Link library directory
-        link_directories("${GRAPHVIZ_ROOT}/lib")
-    
-   # Define DLL paths
-  set(GRAPHVIZ_GVC_DLL "${GRAPHVIZ_ROOT}/bin/gvc.dll")
-        set(GRAPHVIZ_CGRAPH_DLL "${GRAPHVIZ_ROOT}/bin/cgraph.dll")
-        set(GRAPHVIZ_CDT_DLL "${GRAPHVIZ_ROOT}/bin/cdt.dll")
+    set(GRAPHVIZ_SEARCH_PATHS
+        "$ENV{GRAPHVIZ_ROOT}"
+        "$ENV{GRAPHVIZ_HOME}"
+        "C:/Program Files/Graphviz"
+        "C:/Program Files (x86)/Graphviz"
+    )
+
+    foreach(candidate_path IN LISTS GRAPHVIZ_SEARCH_PATHS)
+        if(candidate_path AND EXISTS "${candidate_path}/include/graphviz/gvc.h")
+            set(GRAPHVIZ_FOUND ON)
+            set(GRAPHVIZ_ROOT_DIR "${candidate_path}")
+            break()
+        endif()
+    endforeach()
+
+    if(GRAPHVIZ_FOUND)
+        message(STATUS "Graphviz detected at ${GRAPHVIZ_ROOT_DIR}")
+        target_include_directories(${PROJECT_NAME} PRIVATE "${GRAPHVIZ_ROOT_DIR}/include")
+        set(GRAPHVIZ_LIBRARY_NAMES gvc cgraph cdt)
+        set(GRAPHVIZ_LINK_LIBRARIES)
+
+        foreach(lib_name IN LISTS GRAPHVIZ_LIBRARY_NAMES)
+            find_library(GRAPHVIZ_${lib_name}_LIBRARY NAMES ${lib_name}
+                PATHS "${GRAPHVIZ_ROOT_DIR}/lib"
+                NO_DEFAULT_PATH
+            )
+
+            if(GRAPHVIZ_${lib_name}_LIBRARY)
+                list(APPEND GRAPHVIZ_LINK_LIBRARIES "${GRAPHVIZ_${lib_name}_LIBRARY}")
+            else()
+                set(GRAPHVIZ_FOUND OFF)
+                message(WARNING "Graphviz library ${lib_name} not found under ${GRAPHVIZ_ROOT_DIR}/lib")
+                break()
+            endif()
+        endforeach()
+
+        if(GRAPHVIZ_FOUND)
+            target_link_libraries(${PROJECT_NAME} PRIVATE ${GRAPHVIZ_LINK_LIBRARIES})
+            set(GRAPHVIZ_DLL_NAMES gvc.dll cgraph.dll cdt.dll)
+
+            foreach(dll_name IN LISTS GRAPHVIZ_DLL_NAMES)
+                set(dll_path "${GRAPHVIZ_ROOT_DIR}/bin/${dll_name}")
+                if(EXISTS "${dll_path}")
+                    list(APPEND GRAPHVIZ_DLLS "${dll_path}")
+                endif()
+            endforeach()
+        endif()
     else()
-   message(WARNING "Graphviz not found at ${GRAPHVIZ_ROOT}. Graphviz features will be disabled.")
+        message(WARNING "Graphviz headers not found; the fallback layout will be used.")
+    endif()
+
+    if(GRAPHVIZ_DLLS)
+        foreach(graphviz_dll IN LISTS GRAPHVIZ_DLLS)
+            add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    "${graphviz_dll}"
+                    $<TARGET_FILE_DIR:${PROJECT_NAME}>
+                COMMENT "Copying ${graphviz_dll} to output directory"
+            )
+        endforeach()
     endif()
 endif()
 
-# Include directories
-include_directories(
-    ${CMAKE_SOURCE_DIR}/src
-)
-
-# Source files
-set(SOURCES
-    src/main.cpp
-    
-    # Core
-    src/core/graph.cpp
-    src/core/list_node.cpp
-    src/core/tree_node.cpp
-    src/core/data_model_manager.cpp
-    src/core/array_structure.cpp
-    src/core/graph_structure.cpp
-    src/core/list_structure.cpp
-    src/core/tree_structure.cpp
-    
-    # Orchestration
-    src/orchestration/algorithm_manager.cpp
-    src/orchestration/sorting_algorithm_factory.cpp
-    
-    # Algorithms
-    src/algorithms/algorithm_runner.cpp
-    src/algorithms/execution_state.cpp
-    src/algorithms/frame_recorder.cpp
-    src/algorithms/bubble_sort.cpp
-    src/algorithms/quick_sort.cpp
-    src/algorithms/merge_sort.cpp
-    src/algorithms/bfs_runner.cpp
-    src/algorithms/dfs_runner.cpp
-    src/algorithms/dijkstra_runner.cpp
-    
-    # Visualization
-    src/visualization/animation_frame.cpp
-    src/visualization/visualization_renderer.cpp
-    src/visualization/interaction_manager.cpp
-    src/visualization/playback_controller.cpp
-    src/visualization/GraphvizLayoutEngine.cpp
-
-    # UI
-    src/ui/main_window.cpp
-    src/ui/visualization_pane.cpp
-    src/ui/control_panel.cpp
-    src/ui/metrics_panel.cpp
-    src/ui/toolbox_panel.cpp
-)
-
-# Header files
-set(HEADERS
-    # Core
-    src/core/graph.h
-    src/core/list_node.h
-    src/core/tree_node.h
-    src/core/data_model_manager.h
-    src/core/data_structure.h
-    src/core/algorithm_info.h
-    src/core/array_structure.h
-    src/core/graph_structure.h
-    src/core/list_structure.h
-    src/core/tree_structure.h
-    
-    # Orchestration
-    src/orchestration/algorithm_factory.h
-    src/orchestration/algorithm_manager.h
-    src/orchestration/sorting_algorithm_factory.h
-    src/orchestration/algorithm.h
-    
-    # Algorithms
-    src/algorithms/algorithm_runner.h
-    src/algorithms/execution_state.h
-    src/algorithms/frame_recorder.h
-    src/algorithms/bubble_sort.h
-    src/algorithms/quick_sort.h
-    src/algorithms/merge_sort.h
-    src/algorithms/bfs_runner.h
-    src/algorithms/dfs_runner.h
-    src/algorithms/dijkstra_runner.h
-    
-    # Visualization
-    src/visualization/animation_frame.h
-    src/visualization/visualization_renderer.h
-    src/visualization/interaction_manager.h
-    src/visualization/playback_controller.h
-    src/visualization/GraphvizLayoutEngine.h
-    
-    # UI
-    src/ui/main_window.h
- src/ui/visualization_pane.h
-    src/ui/control_panel.h
-  src/ui/metrics_panel.h
-    src/ui/toolbox_panel.h
-)
-
-# Create executable
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
-
-# Link Qt libraries
-target_link_libraries(${PROJECT_NAME} PRIVATE 
-    Qt6::Core 
-    Qt6::Gui 
-    Qt6::Widgets
-    gvc
-    cgraph
-    cdt
-)
-
-# Set output directory
 set_target_properties(${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
 
-# Platform-specific settings
 if(WIN32)
     set_target_properties(${PROJECT_NAME} PROPERTIES
         WIN32_EXECUTABLE TRUE
- )
-    
-    # === Copy Graphviz DLLs to output directory (if found) ===
-    if(GRAPHVIZ_FOUND)
-      add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
- "${GRAPHVIZ_GVC_DLL}"
-"${GRAPHVIZ_CGRAPH_DLL}"
-        "${GRAPHVIZ_CDT_DLL}"
-     $<TARGET_FILE_DIR:${PROJECT_NAME}>
-      COMMENT "Copying Graphviz DLLs to output directory"
-   )
-    endif()
+    )
 endif()
 
-# Install target
 install(TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION bin
 )
